Fix article spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Noto Sans", sans-serif;
+  color: #000;
 }
 
 .title, nav {
